# syn-office

./: .gitignore  MIGRATIONS_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  STARTUP_GUIDE.md  Synoffice MVP Documentations.md  ai_coding_guidelines.md  run-migrations.bat  run-migrations.sh
agent-orchestrator/: Dockerfile  available_methods.txt  config.py  cost_engine.py  credit_client.py  database.py  embeddings.py  inspect_query_points.txt  llm_client.py  main.py  memory_extractor.py  methods.txt  metrics.py  models.py  orchestrator.py  pyproject.toml  pytest.ini  qdrant_service.py  rate_limiter.py  requirements.txt  test_output.txt
agent-orchestrator/config/: models.yaml  policies.yaml
agent-orchestrator/model_selection/: __init__.py  capability_extractor.py  model_registry.py  model_selector.py  policy_enforcer.py  scoring_engine.py  types.py
agent-orchestrator/providers/: __init__.py  anthropic_provider.py  base.py  groq_provider.py  ollama_provider.py  openai_provider.py
agent-orchestrator/tests/: conftest.py  test_capability_extractor.py  test_execution_orchestrator.py  test_model_registry.py  test_model_selector.py  test_orchestrator_integration.py  test_plan_parser.py  test_policy_enforcer.py  test_quota_manager.py  test_schema_generator.py  test_scoring_engine.py  test_security_gateway.py  test_tool_registry.py
agent-orchestrator/tool_execution/: __init__.py  execution_orchestrator.py  plan_parser.py  quota_manager.py  result_normalizer.py  sandbox.py  schema_generator.py  security_gateway.py  tool_registry.py  types.py
backend/: go.mod  (+5 more)
(+79 files in other folders)
